@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * Fixed a bug when PUT and multi-value form parameters.
+* Improved path parameter support. Rest Assured no longer URL encodes path parameters in order to detect them as query parameters.
 
 Change log 1.2.2 (2011-06-28)
 -----------------------------
